[package]
name = "blur-fps-unlocker"
version = "0.1.0"
edition = "2021"

[lib]
name = "blur_fps_unlocker"
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.20", features = [
    "max_level_debug",
    "release_max_level_info",
] }
#retour = { version = "0.3", features = ["static-detour"] }
simplelog = "0.12.1"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Foundation_Numerics", "Win32_System_SystemServices", "Win32_System_Memory", "Win32_System_LibraryLoader"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core" }
#anyhow = "1.0.75"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true